--- a/views/results.erb
+++ b/views/results.erb
@@ -1,6 +1,6 @@
 <h1>Your Text Analysis</h1>
 
-<h2><%= @text_analyzer.count_of_words%></h2>
+<h2><%= @analyzed_text.count_of_words%></h2>
 
 <h2>Vowels: </h2>
 
