--- a/views/results.erb
+++ b/views/results.erb
@@ -8,4 +8,4 @@
 
 <h2>Consonants:<%= @analyzed_text.count_of_consonants%></h2>
 
-<h2>Most Common Letter:<%= @analyzed_text.most_used_letter.key.first%></h2>
+<h2>Most Common Letter:<%= @analyzed_text.most_used_letter.key.first%>,<%=  @analyzed_text.value.first%></h2>
